--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,17 @@ ul li {
     display: none;
 }
 
+#roleUpdateModal {
+    background: rgba(64, 64, 64, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+}
+
+.deletebtn {
+    margin-top: 20px;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .divTablet {
         display: none;
